# context7-cli

./: .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.claude/commands/: create-gh-issue.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: release.md
src/: cli.rs  lib.rs  main.rs
src/clients/: context7.rs  mock_context7.rs  mod.rs
src/commands/: get_docs.rs  lucky.rs  mod.rs  search.rs
src/core/: formatting.rs  mod.rs  sorting.rs  validation.rs
src/models/: mod.rs  search.rs
tests/: e2e.rs  test_context7_integration.rs
